# PhilLit

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  IDEAS.md  IMPLEMENTATION_PLAN.md  README-BETA-TESTERS.md  README.md  TODO.md  lit-review-plan.md  literature-domain-1.bib  literature-domain-2.bib  literature-domain-3.bib  literature-domain-4.bib  literature-domain-5.bib  literature-domain-6.bib  literature-review-final.md  pyproject.toml  start-claude.ps1  start-claude.sh  synthesis-outline.md  synthesis-section-1.md  synthesis-section-2.md  synthesis-section-3.md  synthesis-section-4.md  task-progress.md  validation-report.md
.claude/: settings.json
.claude/agents/: ARCHITECTURE.md  README.md  citation-validator.md  conventions.md  domain-literature-researcher.md  literature-review-planner.md  novelty-assessor.md  research-proposal-orchestrator.md  sota-review-editor.md  synthesis-planner.md  synthesis-writer.md
.claude/docs/: ARCHITECTURE.md  conventions.md  permissions-guide.md
.claude/hooks/: bib_validator.py  setup-environment.sh  subagent_stop_bib.sh  validate_bib_write.py
.claude/plans/: metadata-enrichment-plan.md
docs/known-issues/: background-bash-tasks.md
docs/sugestions/: AGENT_REVIEW_AND_RECOMMENDATIONS.md  BIBTEX-FORMAT.md  EXECUTIVE_SUMMARY.md  QUICK_START_IMPROVEMENTS.md
first good rev/: EXECUTIVE-SUMMARY.md  state-of-the-art-review-draft.md
reviews/concept-of-tradition/: 01-concept-of-tradition-literature-all.bib  (+1 more)
tests/: test_bib_validator.py  test_dedupe_bib.py  test_enrich_bibliography.py  test_search_core.py
(+348 files in other folders)
