[project]
name = "philreview"
version = "0.1.0"
description = "Multi-agent system for generating literature reviews in philosophy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "arxiv>=1.4.0",
    "pybtex>=0.24.0",
    "pymarkdownlnt>=0.9.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "coverage>=7.0.0",
]
